WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
303918
[blocks-in-inline] Fix fast/dom/Element/getBoundingClientRect.html
https://bugs.webkit.org/show_bug.cgi?id=303918
Summary
[blocks-in-inline] Fix fast/dom/Element/getBoundingClientRect.html
alan
Reported
2025-12-10 05:38:46 PST
ssia
Attachments
[fast-cq]Patch
(2.04 KB, patch)
2025-12-10 05:42 PST
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2025-12-10 05:42:02 PST
Created
attachment 477684
[details]
[fast-cq]Patch
EWS
Comment 2
2025-12-10 06:50:35 PST
Committed
304229@main
(61d621ecdb57): <
https://commits.webkit.org/304229@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 477684
[details]
.
Radar WebKit Bug Importer
Comment 3
2025-12-10 06:51:13 PST
<
rdar://problem/166223798
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug