[blocks-in-inline] Fix fast/dom/Element/getBoundingClientRect.html https://bugs.webkit.org/show_bug.cgi?id=303918

Reviewed by Antti Koivisto.

Let's make the inline box's enclosing behavior consistent between single-block and multi-block content (use constraint geometry as opposed to content geometry).

* Source/WebCore/layout/formattingContexts/inline/InlineLineBoxBuilder.cpp:
(WebCore::Layout::LineBoxBuilder::constructBlockContent):

Canonical link: https://commits.webkit.org/304229@main